force-app/main/default/objects/Laudos_de_Ensaio_de_Seg_El_trica__c/Laudos_de_Ensaio_de_Seg_El_trica__c.object-meta.xml
<CustomObject>
    <label>Ensaio de Segurança Elétrica (E.S.E)</label>
    <nameField>
        <displayFormat>E.S.E - {000000000}</displayFormat>
        <label>Nº do Laudo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E.S.E</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>