force-app/main/default/objects/Laudos_de_Ensaio_de_Seg_El_trica__c/fields/Data_do_Pr_ximo_E_S_E1__c.field-meta.xml
<CustomField>
    <fullName>Data_do_Pr_ximo_E_S_E1__c</fullName>
    <label>Data do Próximo E.S.E</label>
    <type>Date</type>
</CustomField>