force-app/main/default/objects/Laudos_de_Ensaio_de_Seg_El_trica__c/fields/Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Equipamento__c</fullName>
    <label>Equipamento</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ensaios de Segurança Elétrica (E.S.E)</relationshipLabel>
    <relationshipName>Laudos_de_Ensaio_de_Seg_El_trica_E_S_E</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>