force-app/main/default/objects/Laudos_de_Ensaio_de_Seg_El_trica__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <formula>TEXT(Equipamento__r.Marca__c)</formula>
    <label>Marca</label>
    <type>Text</type>
</CustomField>