force-app/main/default/objects/Laudos_de_Ensaio_de_Seg_El_trica__c/fields/N_de_Serie__c.field-meta.xml
<CustomField>
    <fullName>N_de_Serie__c</fullName>
    <formula>Equipamento__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº de Série</label>
    <type>Text</type>
</CustomField>