force-app/main/default/objects/Laudos_de_Ensaio_de_Seg_El_trica__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( TODAY() &lt;  Data_do_Pr_ximo_E_S_E1__c  - 60 ,  IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0153100000815oV&amp;oid=00Di0000000JVhH&amp;lastMod=1476125905000&quot;, &quot;&quot;, 15, 15) , IF(AND(  Data_do_Pr_ximo_E_S_E1__c  -60 &lt; TODAY(),TODAY() &lt;  Data_do_Pr_ximo_E_S_E1__c ) , IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0153100000815oa&amp;oid=00Di0000000JVhH&amp;lastMod=1474642985000&quot;, &quot;&quot;, 15, 15),IMAGE(&quot;https://hospcom--c.na25.content.force.com/servlet/servlet.FileDownload?file=0153100000815of&quot;, &quot;&quot;, 15, 15)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>