force-app/main/default/objects/Laudos_de_Ensaio_de_Seg_El_trica__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Equipamento__c</columns>
    <columns>Marca__c</columns>
    <columns>Modelo__c</columns>
    <columns>N_de_Serie__c</columns>
    <columns>Patrim_nio_Tag__c</columns>
    <columns>Data_do_E_S_E__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>